--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>What's In My Fridge</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
     <!-- Custom styles for this template -->
-    <link href="/css/cover.css" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <link href="css/cover.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 
     
     <!-- Google Fonts -->
