--- a/frango.html
+++ b/frango.html
@@ -8,7 +8,7 @@
     <title>What's In My Fridge</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
     <!-- Custom styles for this template -->
     <link href="css/cover.css" rel="stylesheet">
